# company-extractor-storer

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
src/agents/: company_agent.py
src/database/: models.py  operations.py
src/extractors/: company_extractor.py
src/models/: company.py
src/samples/: essay.txt
src/utils/: config.py
